# python-mastery

./: .gitignore  LICENSE  README.md  calculator.py  pyproject.toml
.github/: copilot-instructions.md
docs/: ADVANCED_README.md  ADVANCED_README.md.backup  BEGINNER_README.md  INTERMEDIATE_README.md
scripts/: main.py
src/beginner/: README.md  conditional_statements.py  functions.py  loops.py  module3.py  module4.py  module5.py  with_dictionary.py  with_list.py  with_numbers.py  with_set.py  with_strings.py  with_tuples.py
src/calculator/: calculator.py
src/calculator/core/: base.py  exceptions.py  history.py  registry.py
src/calculator/operations/: __init__.py  arithmetic.py
src/pcep/module1/: calculator.py  reverse_string.py  solve_me_first.py  two_sum.py  unit_converters.py
src/pcep/module2/: memory_profiler.py  number_complement.py  practice.py  simple_memory_profiler.py
src/python_mastery/advanced/: module1.py
src/python_mastery/beginner/: module1.py  module2.py  module3.py  module4.py  module5.py
src/python_mastery/knowledge_base/: concurency_parallelism.py  htread_pool_executor.py  real_world_examples_threading.py  thread_pool_executor.py  threading_practice.py
src/python_mastery/knowledge_base/multi_processing/: multi_processing.py
src/python_mastery/knowledge_base/multi_threading/: real_world_examples_threading.py  (+1 more)
tests/pcep/module1/: test_calculator.py  test_reverse_string.py  test_solve_me_first.py  test_two_sum.py  test_unit_convertors.py
tests/pcep/module2/: test_memory_profiler.py  test_person.py  test_practice.py
