# project configurations
[project]
name = "python-mastery"
version = "0.1.0"
description = "A structured Python learning repository following PCEP, PCAP, and PCPP1 certification paths, featuring hands-on practice, mini-projects, and comprehensive test coverage."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.8.0",
]


# pytest configurations
[tool.pytest.ini_options]
addopts = [
    "-v",               # verbose output
    "-s",               # don't capture stdout/stderr
    "--tb=short",       # short traceback format
    "--strict-markers", # treat unknown markers as errors
    "--strict-config",  # treat unknown config options as errors
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
